[package]
name = "pipfs"
version = "0.1.0"
authors = ["Aviral Srivastava <avi.srivastava254084@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2-rfc = "0.2.18"
hex-literal = "0.2.1"

[dependencies.substrate-api-client]
git = "https://github.com/scs/substrate-api-client"
